# medical-assistant

./: .gitignore  README.md  docker-compose.yml  projetc.md
app/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
app/api/: __main__.py
app/api/application/agents/: __init__.py  mcp_agent.py
app/api/application/database/chroma/: connection_interface.py
app/api/application/graph/: __init__.py  graph_manager.py
app/api/application/graph/nodes/: __init__.py  hybrid_search_node.py  response_hybrid_node.py  response_search_node.py  semantic_router.py  vector_search_node.py
app/api/application/services/: __init__.py  graph_service.py
app/api/application/services/mcp/: client.py
app/api/application/services/semantic_anchor/: __init__.py  (+1 more)
app/api/infra/config/: __init__.py  env.py
app/api/infra/container/: dependecies.py
app/api/infra/database/: __init__.py
app/api/infra/utils/: logger.py  query_normalizer.py
app/api/infra/web/: __init__.py  app.py  routes.py
app/frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  chat.css  index.css
app/frontend/src/components/: ChatInterface.tsx  MessageBubble.tsx  markdown.css
app/frontend/src/hooks/: useChat.ts
app/frontend/src/types/: chat.ts
app/frontend/src/utils/: api.ts
app/mcp-server/: .dockerignore  Dockerfile  requirements.txt  server.py
app/mcp-server/data/: mock_patients.json
app/mcp-server/tools/: __init__.py  patient_by_cpf.py  patient_by_id.py  patient_by_name.py  patient_by_rg.py
(+20 files in other folders)
